--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
 
 
-<a href="https://flixexpo.com">https://flixexpo.com</a>
-
-<a href="https://winrating.ru">https://winrating.ru</a>
+<a href="https://tmm.net.pl">https://tmm.net.pl</a>
+<a href="https://vitaria.pl">https://vitaria.pl</a>
+<a href=""></a>
