--- a/index.html
+++ b/index.html
@@ -15,19 +15,16 @@
             <ul>
 
     <h2>About Us</h2>
-    <p>Search Engine Optimization (SEO) is the process of improving a website’s visibility and ranking on search engine results pages (SERPs) like Google, Bing, or Yahoo. The goal of SEO is to attract organic (non-paid) traffic to your site by making it more attractive to search engines, which in turn improves its chances of ranking higher for relevant search queries.</p>
-    <p>We specialize in web design, development, and digital marketing to help your business grow online.</p>
+    <p>Sure! SEO (Search Engine Optimization) is the process of improving a website or web content to increase its visibility on search engines like Google. If you tell me more specifically what you’re looking for—such as SEO for a blog, e-commerce site, YouTube channel, local business, or something else—I can tailor the advice.</p>
 </section>
 
         
   
-<a href="https://usa-bestdeals.com ">usabest</a>
-<a href="https://rstsoft.net ">rstsoft</a>
-<a href="https://rusel.org/ ">rusel</a>
-<a href="https://wellsbranchremodeleraustin.com">wellsbranch</a>
-
-
-
-<a href="https://tmm.net.pl">https://tmm.net.pl</a>
-<a href="https://vitaria.pl">https://vitaria.pl</a>
+<a href="https://golinder.com">https://toxirium.com/</a>
+<a href="https://blueloungebar.com">https://golinder.com</a>
+<a href="https://ideasforlifepaint.com">https://blueloungebar.com</a>
+<a href="https://toxirium.com/">https://ideasforlifepaint.com</a>
+<a href="https://bubsuniverse.com.au/">https://toxirium.com/</a>
+<a href="">https://bubsuniverse.com.au/</a>
+<a href=""></a>
 <a href=""></a>
