--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <a href="https://golinder.com">https://toxirium.com/</a>
 <a href="https://blueloungebar.com">https://golinder.com</a>
 <a href="https://ideasforlifepaint.com">https://blueloungebar.com</a>
-<a href="https://toxirium.com/">https://ideasforlifepaint.com</a>
-<a href="https://bubsuniverse.com.au/">https://toxirium.com/</a>
-<a href="">https://bubsuniverse.com.au/</a>
-<a href=""></a>
+
+
+<a href="https://lenishome.com/en">lenishome.com/en</a>
 <a href=""></a>
