--- a/index.html
+++ b/index.html
@@ -20,10 +20,4 @@
 
         
   
-<a href="https://golinder.com">https://toxirium.com/</a>
-<a href="https://blueloungebar.com">https://golinder.com</a>
-<a href="https://ideasforlifepaint.com">https://blueloungebar.com</a>
-
-
-<a href="https://lenishome.com/en">lenishome.com/en</a>
-<a href=""></a>
+<a href="https://www.encryptionconsulting.com">https://www.encryptionconsulting.com</a>
